# rby1_moveit_client

./: CMakeLists.txt  package.xml
src/: apriltag_nav2_gripper.cpp  apriltag_to_nav2_test.cpp  init_base.cpp  moveit_coverage_scan.cpp  moveit_coverage_scan2.cpp  moveit_gripper_base_test.cpp  moveit_gripper_test.cpp  moveit_object_record.cpp  moveit_reset_pose.cpp  moveit_simple_client.cpp  moveit_wrist_scan.cpp  simple_base.cpp  simple_gripper.cpp  simple_head.cpp  simple_torso.cpp  wrist_scan_capture.cpp
